<resources>
    <string name="app_name">Carteira Virtual</string>
    <string name="cadastro">TELA DE LOGIN</string>
    <string name="login">Login</string>
    <string name="button_entrar">ENTRAR</string>
    <string name="digitar_email_hint">E-mail</string>
    <string name="digitar_senha_hint">Senha</string>
    <string name="titulo_tela_de_login">tela de login</string>
    <string name="segunda_activity_saldo">Seu saldo:</string>
    <string name="segunda_activity_gastos">Seus gastos:</string>
    <string name="objetivo">Qual o preço do seu objetivo?</string>
    <string name="preco">Preço:</string>
</resources>